--- a/wnbl_csv.ipynb
+++ b/wnbl_csv.ipynb
@@ -88,6 +88,7 @@
    "source": [
     "# concatenate all teams by season info, drop duplicates to define unique TeamID and name mapping\n",
     "teams_df = wnbl.load_csv(data_path,'teams')\n",
+    "teams_df = teams_df.drop_duplicates().reset_index()\n",
     "teams_df.info()"
    ]
   },
@@ -145,6 +146,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(players_df.shape)\n",
+    "print(seasons_df.shape)\n",
+    "print(teams_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# merge players and seasons so we can plot by date\n",
     "players_df = players_df.merge(seasons_df,on='CompID',how='left')"
    ]
@@ -157,15 +169,6 @@
    "source": [
     "players_df = players_df.merge(teams_df,on='TeamID',how='left')\n",
     "# players_df = players_df.rename(columns={'Team_y':'Team'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "players_df.info()"
    ]
   },
   {
@@ -341,7 +344,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "da.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = da[['Player','Team','Year','EPG','CompID']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = tmp[tmp['CompID']==comp_id]\n",
+    "tmp\n",
+    "#tmp[tmp['Team']=='Townsville Fire']"
+   ]
   }
  ]
 }
