ELO code and output
ELO code and output at end of regular season

--- a/scripts/wnbl_csv.ipynb
+++ b/scripts/wnbl_csv.ipynb
@@ -42,7 +42,7 @@
     "import os\n",
     "import wnbl\n",
     "\n",
-    "data_path = \".\\\\data\""
+    "data_path = \"..\\\\data\""
    ]
   },
   {
