--- a/scripts/wnbl_scrape.ipynb
+++ b/scripts/wnbl_scrape.ipynb
@@ -15,7 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python38564bit72cb0406bdb44ef9960e9117df10c976",
-   "display_name": "Python 3.8.5 64-bit"
+   "display_name": "Python 3.8.5 64-bit",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -23,16 +24,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "C:\\Users\\Emanuel\\AppData\\Local\\Programs\\Python\\Python38\\python.exe\n"
+     ]
+    }
+   ],
    "source": [
     "print(sys.executable)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get seasons from the drop-down select elements\n",
     "\n",
     "comp_id = str(current_comp_id)\n",
-    "urlc = url_comp.replace('{COMP}',comp_id)\n",
-    "\n",
-    "seasons = wnbl.get_seasons(url_comp)"
+    "urlc = url_comp.replace('{COMP}',comp_id)\n"
    ]
   },
   {
@@ -77,6 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "seasons = wnbl.get_seasons(url_comp)\n",
     "seasons_df = pd.DataFrame(seasons,columns=['Season','Year','URL','CompID'])\n",
     "seasons_df.to_csv('seasons.csv',index=False)"
    ]
